--- a/manifest_file/service.yaml
+++ b/manifest_file/service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: todo-ui-service
+  name: todo-ui-service1
 spec:
   selector:
     type: ui-pod
-  type: LoadBalancer
+  type: ClusterIP
   ports:
    - port: 80
      targetPort: 80
