--- a/manifest_file/service.yaml
+++ b/manifest_file/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   selector:
     type: ui-pod
-  type: LoadBalancer
+  type: ClusterIP
   ports:
    - port: 80
      targetPort: 80
